Thu Jul 25 12:11:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* kadmin.c (quit): Return zero so that we return the proper exit
		status. 
		(kadmin_getprivs): Declare function as returning void

Wed Jul 24 14:18:13 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (all): Use $(LD) instead of $(CC) for link stage.

	* dump.c (dump_db): Zero out kadm5_principal_ent_rec structure
		before passing to rpc code. 

	* kadmin.c (kadmin_addprinc, kadmin_getprinc, kadmin_modprinc):
		   Zero out structures before passing to rpc code.

Tue Jul 23 17:02:04 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in: add dependency for kadmin_ct.o

Fri Jul 19 16:10:39 1996  Marc Horowitz  <marc@mit.edu>

	* ss_wrapper.c (main): ss_execute_line was being called with three
 	args.  There are only two, so no error was ever being returned.

Thu Jul 18 19:14:51 1996  Marc Horowitz  <marc@mit.edu>

	* attic/configure.in: removed SS_RULES

	* keytab.c (etype_string): ifdef out des3 reference

	* configure.in: removed SS_RULES

Mon Jul 15 16:56:43 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.1, keytab.c (kadmin_keytab_add): change ktadd usage to
 	accept -glob

Tue Jul  9 16:15:46 1996  Marc Horowitz  <marc@mit.edu>

	* Makefile.in: complete rewrite
	* configure.in: add the necessary USE_*_LIBRARY macros
	
Mon Jul  8 16:45:20 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.1: Update man page for kadm5 changes and functionality.
	
